# el-stupido

./: .gitignore  AGENTS.md  EXPERIMENTS.md  FINDINGS.md  Makefile  OBSERVER.md  README.md  SUCKLESS.md  TAPE.md  compactions.json  context.grug
.opencode/: opencode.json
agent/: PROMPT.md  embedding_experiment.py  esc_agent.py  test_self_correction.py
bench/: round8.py  run.sh
compiler/: Cargo.toml
compiler/primitives/: Cargo.toml
compiler/primitives/src/: grug.rs  html.rs  http.rs  lib.rs
compiler/src/: assist.rs  atomic.rs  cache.rs  compose.rs  context.rs  emit.rs  grammar.rs  main.rs  memory.rs  primitive.rs
data/: codebook_eval_ood.csv  codebook_train.csv  codebook_val.csv
examples/: asm_simple.es  cb_cli_grep.es  cb_full_stack.es  cb_grugbook.es  cb_hello.es  cb_invaders.es  cb_issue_tracker.es  cb_rest_users.es  cb_snake.es  cb_test_math.es  cb_ws_auto.es  cb_ws_echo.es  compose_add_args.json  compose_branch_repeat.json  compose_csv_field.json  compose_dynamic_path.json  compose_file_report.json  compose_format_greeting.json  compose_guestbook.json  compose_http_dyn.json  compose_http_test.json  compose_is_even.json  compose_prompt_double.esc  compose_prompt_double.json  compose_prompt_double.tape  compose_search_replace.json  compose_shell_hostname.json  compose_shell_pipe.json  compose_shell_uptime.json  compose_stdin_transform.json  compose_string_tools.json  compose_sum.esc  compose_sum.json  compose_sum.tape  compose_weather.json  compose_word_count.json  comptime.es  crud_grugbook.es  emoji.es  fib.es  (+25 more)
lib/: gl.es  grug.es  http.es  map.es  (+5 more)
(+446 files in other folders)
