[package]
name = "esc"
version = "0.1.0"
edition = "2024"
description = "el-stupido compiler — composable primitives for program generation"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.60", features = ["derive"] }
thiserror = "2.0.18"

[profile.release]
opt-level = "z"
lto = true
strip = true
