[package]
name = "esc"
version = "0.1.0"
edition = "2024"
description = "esc — persistent memory graph and session context"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.60", features = ["derive", "env"] }
sha2 = "0.10"
ed25519-dalek = "2"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
strip = true
